--- a/client/src/components/grid/sectionCards/card/card.module.css
+++ b/client/src/components/grid/sectionCards/card/card.module.css
@@ -2,6 +2,7 @@
   position: relative;
   max-width: 310px;
   width: 100%;
+  justify-self: center;
 }
 
 .wrapperCard a {
@@ -36,4 +37,34 @@
 .image:hover {
   scale: 1.02;
   transition: 0.3s;
+}
+
+.favouriteBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.16);
+  transition: 0.5s;
+  z-index: 9;
+}
+
+.favouriteBtn:hover {
+  background-color: #fc351b60;
+  scale: 1.3;
+  transition: 0.5s;
+}
+
+.favActive {
+  transform: rotate(360deg);
+  background-color: var(--color-button);
+  color: var(--color-button);
 }
