--- a/client/src/components/details/sectionDetails/similarMovies/similar.module.css
+++ b/client/src/components/details/sectionDetails/similarMovies/similar.module.css
@@ -4,7 +4,7 @@
 
 .carouselDiv {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   max-height: 400px;
   overflow: hidden;
   cursor: pointer;
