--- a/client/src/app/(auth)/auth.module.css
+++ b/client/src/app/(auth)/auth.module.css
@@ -81,6 +81,7 @@
   font-weight: 700;
   width: 100%;
   height: 60px;
+  margin-bottom: 1rem;
 }
 
 .btn:hover {
@@ -97,5 +98,6 @@
   .btn {
     width: 150px;
     margin-right: 1rem;
+    margin-bottom: 0;
   }
 }
