--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -1,16 +1,22 @@
-.header{
+.header {
   z-index: 99999;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  padding: 1rem 1rem;
-  max-width: 1440px!important;
+  padding: .5rem 1rem;
+  max-width: 1440px !important;
   margin: 0 auto;
 }
 
+@media screen and (min-width: 500) {
+  .header {
+    padding: 1rem 1rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
-  .header{
+  .header {
     padding: 1rem 3rem;
   }
 }
