--- a/client/src/components/grid/menuFilter/search/search.module.css
+++ b/client/src/components/grid/menuFilter/search/search.module.css
@@ -34,6 +34,11 @@
   background-color: var(--hover-search);
 }
 
+.search img {
+  width: 30px;
+  height: 30px;
+}
+
 @media screen and (min-width: 425px) {
   .search input {
     width: 90%;
